roster.css
/* ... */
#headermenu .menu-content {
    top: calc(100% + 10px);
    right: 0px;
    background: linear-gradient(120deg, #002329, #115559);
    border: 2px solid #112523;
    box-shadow: 0 0 2px #000000, 0 0 5px #115559;
    border-radius: 10px;
    padding: 0;
    overflow: hidden;
}

.menu-button {
    cursor: pointer;
    position: relative;
}

.menu-button .menu-content {
    display: grid;
    white-space: nowrap;
    position: absolute;
    z-index: 15;
    transform: scale(0);
    opacity: 0;
    transition: opacity 400ms ease-out, transform 0ms ease 400ms;
}

@media (pointer: fine) {
.menu-button:hover .menu-content {
    opacity: 0.9;
    transform: none;
    transition: opacity 400ms ease-out;
}
}
.menu-button.visible .menu-content {
    opacity: 0.9;
    transform: none;
    transition: opacity 400ms ease-out;
}

.menu-content .menu-item {
    display: block;
    font-size: 20px;
    font-family: AquilaEthnocentric;
    font-weight: bold;
    text-decoration: none;
    color: #D1E8E2;
    width: 100%;
    text-align: left;
    margin: 0 2px;
    padding: 5px 10px;
    box-shadow: 0 1px 4px #111111;
    transition: all 400ms ease-out;
}

.menu-content .menu-item:hover {
    background-color: rgba(200, 250, 255, 0.3);
}

.menu-content .menu-item.header-menu-admin {
    margin-top: 20px;
    font-size: 50%;
    color: #A1A8A2;
}

#footerframe {
    flex: initial;
    width: 100%;
    border-top: 1px solid #116466;
    margin-top: 10px;
    background: linear-gradient(-1deg, #116466, #112122, #111111);
    box-shadow: 0 0 5px #111;
}

#footer_logo {
    float: right;
    padding: 0 5px 0 15px;
}

#footer_tagline {
    width: 900px;
    margin: 10px auto;
    font-size: 14px;
    color: #D1E8E2;
    text-align: right;
}

#footer_corp {
    width: 900px;
    margin: 10px auto;
    color: #D1E8E2;
    text-align: right;
    font-size: 10px;
}

@keyframes spinlogo {
    0% { transform: rotateY(90deg); }
    100% { transform: rotateY(-90deg);}
}

#footer_logo {
    padding: 0 20px;
    perspective: 200px;
    overflow: hidden;
}

#footer_logo img {
    animation: spinlogo 3s linear infinite;
}

#main-body {
    flex: auto;
    color: #D9B08C;
    background: #112233;
}


#roster-list {
    display: grid;
    grid-template-columns: 420px 420px;
    grid-auto-rows: 189px;
    overflow: hidden;
    padding-bottom: 100px;
}

.roster-entry .roster-person-faction {
    text-transform: capitalize;
}

.roster-entry {
    position: relative;
    display: grid;
    grid-gap: 0px;
    grid-template-columns: auto;
    padding: 5px;
    margin: 0px;
    margin-bottom: 0px;
    margin-left: 10px;
    min-height: 180px;
}

.roster-entry:nth-child(odd) {
    text-align: right;
    grid-template-columns: 0px 290px;
}

.roster-entry:nth-child(even) {
    margin: 0px;
    margin-top: 0px;
    grid-template-columns: 110px;
    transform: translate(0px, 95px);
}

.roster-entry:nth-child(odd) > .roster-field-roster_type,
.roster-entry:nth-child(odd) > .roster-person-character_image {
    grid-column: 100;
    transform: translate(57px, 0px);
}

.roster-entry:nth-child(even) > .roster-field-roster_type,
.roster-entry:nth-child(even) > .roster-person-character_image {
    transform: translate(-3px, 0px);
}

.roster-entry.deleted {
    opacity: 0.3;
    background-color: #64140c;
}

.roster-entry > div {
    color: #10c6de;
    text-shadow: 0px 0px 4px #10c6de;
    grid-column: 2;
    width: 350px;
    white-space: nowrap;
}

.roster-entry.editing:nth-child(even) > div:nth-child(n+3) {
    width: 320px;
    margin-left: 0px;
}

.roster-entry.editing:nth-child(odd) > div:nth-child(n+3) {
    width: 310px;
    margin-left: 38px;
}

.roster-entry.editing:nth-child(odd) > div:nth-child(n) .roster-field-radiobutton {
    left: unset;
    right: -20px;
}

.roster-entry.editing:nth-child(odd) > div:nth-child(n+3) input[type="text"] {
    text-align: right;
    padding-right: 4px;
}

.roster-entry .field-conflict {
    background-color: #403710;
    border: 1px solid #605720;
    border-radius: 5px;
    box-shadow: 0 0 2px #c03730;
    padding: 0 3px;
    cursor: help;
    display: grid;
}

.roster-entry .field-conflict-resolved {
    background-color: #106710;
    border: 1px solid #107720;
    box-shadow: 0 0 2px #30c730;
}

.roster-entry .field-conflict-resolved .field-conflict-save {
    display: none;
}

.field-conflict-save::before {
    content: '\f064';
    font: 20px FontAwesome;
    line-height: 20px;
}

.roster-entry .field-conflict-save {
    grid-row: 1/1000;
    grid-column: 2;
    align-self: center;
    justify-self: right;
    border: 1px solid #083740;
    border-radius: 8px;
    padding: 3px;
    background-color: #106770;
    color: #20b7d0;
    box-shadow: 0 0 4px #a09740;
    cursor: pointer;
}

.field-conflict-choice {
    color: #c0a720;
    text-shadow: 0 0 1px #000, 0 0 5px #f5a478;
}

.field-conflict-choose {
    display: flex;
    flex-flow: row;
}

.field-conflict-choose input[type="radio"] {
    display: none;
}

.field-conflict-choose label {
    flex: auto;
}

.field-conflict-choice:not(.selected) {
    text-decoration: line-through;
    opacity: 0.6;
}

.field-conflict-choose input + label::before {
    content: ' ';
    width: 1em;
    line-height: 100%;
    display: inline-block;
}

.field-conflict-choose input:checked + label::before {
    content: '\2714';
}

.field-conflict-choose input:not(:checked) + label {
    text-decoration: line-through;
    color: #907f10;
    text-shadow: 0 0 1px #000, 0 0 5px #f5a478;
}

.roster-entry > .roster-person-character_name {
    font-weight: bold;
    font-size: 120%;
}
/* ... */

